--- a/contact.html
+++ b/contact.html
@@ -3,6 +3,7 @@
 
     <head>
         <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Basic Bio</title>
         <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
         <link rel="stylesheet" type="text/css" href="assets/css/style.css">
@@ -21,7 +22,7 @@
                     </div>
             </div>
         
-        </header>>
+        </header>
 
         <div class="container" class="clearfix">
             <section class="main">
