--- a/portfolio.html
+++ b/portfolio.html
@@ -3,6 +3,7 @@
 
     <head>
         <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Basic Bio</title>
         <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
         <link rel="stylesheet" type="text/css" href="assets/css/style.css">
@@ -27,54 +28,41 @@
             <section class="main">
                 <h2 class="head-2">Portfolio</h2>
                 <section class="port-images">
-                    <a href="#">
-                        <div id="port-div-1">
-                        <img id="port-image-1" class="port-img" src="assets/images/ipad.jpg" alt="" />
-                        <div class="box-label" id="port-image-1-label">
+
+                    <div class="port-div">
+                        <img class="port-img" src="assets/images/ipad.jpg" alt="" />
+                        <div class="box-label">
                             Hangman
                         </div>
-                        </div>
-                    </a>
+                    </div>
 
-                    <!---<a href="#">-->
-                        <!---<img id="port-image-2" src="assets/images/Joe-Profile1.jpg" alt="" />-->
-                    <!---</a>-->
+                    <div class="port-div">
+                        <img class="port-img" src="assets/images/mixer.jpg" alt="" />
+                        <div class="box-label">
+                            RPG Game
+                        </div>
+                    </div>
 
-                    <a href="#">
-                        <div id="port-div-2">
-                            <img id="port-image-2" class="port-img" src="assets/images/mixer.jpg" alt="" />
-                            <div class="box-label" id="port-image-2-label">
-                                RPG Game
-                            </div>
+                    <div class="port-div">
+                        <img class="port-img" src="assets/images/earbuds.jpg" alt="" />
+                        <div class="box-label">
+                            Trivia Game
                         </div>
-                    </a>
-                    
-                    <a href="#">
-                        <div id="port-div-3">
-                            <img id="port-image-3" class="port-img" src="assets/images/earbuds.jpg" alt="" />
-                            <div class="box-label" id="port-image-3-label">
-                                Trivia Game
-                            </div>
-                        </div>
-                    </a>
+                    </div>
 
-                    <a href="#">
-                        <div id="port-div-4">
-                            <img id="port-image-4" class="port-img" src="assets/images/phone.jpg" alt="" />
-                            <div class="box-label" id="port-image-4-label">
-                                Rutgers Info widget
-                            </div>
+                    <div class="port-div">
+                        <img class="port-img" src="assets/images/phone.jpg" alt="" />
+                        <div class="box-label">
+                            Rutgers Info widget
                         </div>
-                    </a>
+                    </div>
 
-                    <a href="#">
-                        <div id="port-div-5">
-                            <img id="port-image-5" class="port-img" src="assets/images/tv.jpg" alt="" />
-                            <div class="box-label" id="port-image-5-label">
-                                Rock Paper Scissors
-                            </div>
+                    <div class="port-div">
+                        <img class="port-img" src="assets/images/tv.jpg" alt="" />
+                        <div class="box-label">
+                            Rock Paper Scissors
                         </div>
-                    </a>
+                    </div>
 
                 </section>
            
