added hangman game link

--- a/portfolio.html
+++ b/portfolio.html
@@ -30,10 +30,12 @@
                 <section class="port-images">
 
                     <div class="port-div">
-                        <img class="port-img" src="assets/images/ipad.jpg" alt="" />
-                        <div class="box-label">
-                            Hangman
-                        </div>
+                        <a href="https://schosev.github.io/hangman-game/" target="_blank">
+                            <img class="port-img" src="assets/images/ipad.jpg" alt="" />
+                            <div class="box-label">
+                                Hangman
+                            </div>
+                        </a>
                     </div>
 
                     <div class="port-div">
