--- a/portfolio.html
+++ b/portfolio.html
@@ -39,10 +39,12 @@
                     </div>
 
                     <div class="port-div">
-                        <img class="port-img" src="assets/images/mixer.jpg" alt="" />
-                        <div class="box-label">
-                            RPG Game
-                        </div>
+                        <a href="https://schosev.github.io/week-4-game/" target="_blank">
+                            <img class="port-img" src="assets/images/mixer.jpg" alt="" />
+                            <div class="box-label">
+                                RPG Game
+                            </div>
+                        </a>
                     </div>
 
                     <div class="port-div">
