--- a/portfolio.html
+++ b/portfolio.html
@@ -48,10 +48,12 @@
                     </div>
 
                     <div class="port-div">
-                        <img class="port-img" src="assets/images/earbuds.jpg" alt="" />
-                        <div class="box-label">
-                            Trivia Game
-                        </div>
+                        <a href="https://schosev.github.io/trivia-game/" target="_blank">
+                            <img class="port-img" src="assets/images/earbuds.jpg" alt="" />
+                            <div class="box-label">
+                                Trivia Game
+                            </div>
+                        </a>
                     </div>
 
                     <div class="port-div">
