Add link to gif api page

--- a/portfolio.html
+++ b/portfolio.html
@@ -57,10 +57,12 @@
                     </div>
 
                     <div class="port-div">
-                        <img class="port-img" src="assets/images/phone.jpg" alt="" />
-                        <div class="box-label">
-                            Rutgers Info widget
-                        </div>
+                        <a href="https://schosev.github.io/api-gif/" target="_blank">
+                            <img class="port-img" src="assets/images/phone.jpg" alt="" />
+                            <div class="box-label">
+                                Rutgers Info widget
+                            </div>
+                        </a>
                     </div>
 
                     <div class="port-div">
