add nature gifs link & image to portfolio page

--- a/portfolio.html
+++ b/portfolio.html
@@ -58,6 +58,15 @@
 
                     <div class="port-div">
                         <a href="https://schosev.github.io/api-gif/" target="_blank">
+                            <img class="port-img" src="assets/images/nature.jpg" alt="" />
+                            <div class="box-label">
+                                Nature Gifs
+                            </div>
+                        </a>
+                    </div>
+
+                    <div class="port-div">
+                        <a href="#" target="_blank">
                             <img class="port-img" src="assets/images/phone.jpg" alt="" />
                             <div class="box-label">
                                 Rutgers Info widget
