Add train schedule link & image to portfolio page

--- a/portfolio.html
+++ b/portfolio.html
@@ -66,6 +66,15 @@
                     </div>
 
                     <div class="port-div">
+                        <a href="https://schosev.github.io/train-schedule/" target="_blank">
+                            <img class="port-img" src="assets/images/train-schedule.jpg" alt="" />
+                            <div class="box-label">
+                                Train Schedule
+                            </div>
+                        </a>
+                    </div>
+
+                    <div class="port-div">
                         <a href="#" target="_blank">
                             <img class="port-img" src="assets/images/phone.jpg" alt="" />
                             <div class="box-label">
