Add liri node app to portfolio page

--- a/portfolio.html
+++ b/portfolio.html
@@ -75,6 +75,15 @@
                     </div>
 
                     <div class="port-div">
+                        <a href="https://github.com/schosev/liri-node-app" target="_blank">
+                            <img class="port-img" src="assets/images/node.png" alt="" />
+                            <div class="box-label">
+                                LIRI Node App
+                            </div>
+                        </a>
+                    </div>
+
+                    <div class="port-div">
                         <a href="#" target="_blank">
                             <img class="port-img" src="assets/images/phone.jpg" alt="" />
                             <div class="box-label">
