Add bamazon app to portfolio page

--- a/portfolio.html
+++ b/portfolio.html
@@ -84,6 +84,15 @@
                     </div>
 
                     <div class="port-div">
+                        <a href="https://github.com/schosev/bamazon" target="_blank">
+                            <img class="port-img" src="assets/images/online_shopping.jpg" alt="" />
+                            <div class="box-label">
+                                Bamazon
+                            </div>
+                        </a>
+                    </div>
+
+                    <div class="port-div">
                         <a href="#" target="_blank">
                             <img class="port-img" src="assets/images/phone.jpg" alt="" />
                             <div class="box-label">
