Add friend finders to portfolio page

--- a/portfolio.html
+++ b/portfolio.html
@@ -93,6 +93,15 @@
                     </div>
 
                     <div class="port-div">
+                        <a href="https://polar-waters-82730.herokuapp.com" target="_blank">
+                            <img class="port-img" src="assets/images/friends.jpg" alt="" />
+                            <div class="box-label">
+                                Friend Finder
+                            </div>
+                        </a>
+                    </div>
+
+                    <div class="port-div">
                         <a href="#" target="_blank">
                             <img class="port-img" src="assets/images/phone.jpg" alt="" />
                             <div class="box-label">
