add clicky game to portfolio page

--- a/portfolio.html
+++ b/portfolio.html
@@ -102,19 +102,21 @@
                     </div>
 
                     <div class="port-div">
-                        <a href="#" target="_blank">
-                            <img class="port-img" src="assets/images/phone.jpg" alt="" />
+                        <a href="https://polar-brook-24825.herokuapp.com/" target="_blank">
+                            <img class="port-img" src="assets/images/kc-skyline.jpg" alt="" />
                             <div class="box-label">
-                                Rutgers Info widget
+                                KC Star Article Scraper
                             </div>
                         </a>
                     </div>
 
                     <div class="port-div">
-                        <img class="port-img" src="assets/images/tv.jpg" alt="" />
-                        <div class="box-label">
-                            Rock Paper Scissors
-                        </div>
+                        <a href="https://schosev.github.io/click-game/" target="_blank">
+                            <img class="port-img" src="https://images.pexels.com/photos/210186/pexels-photo-210186.jpeg?auto=compress&amp;cs=tinysrgb&amp;dpr=2&amp;h=350" alt="Waterfall" />
+                            <div class="box-label">
+                                Waterfall Clicky Game
+                            </div>
+                        </a>
                     </div>
 
                 </section>
